--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,43 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Login_Main"  android:configChanges="keyboardHidden|orientation|screenSize" >
-
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".SplashActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+        <!--
+            <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity
+        -->
+        <!--.Login_Main
+            <activity
             android:name=".AdminActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_admin"
-            android:theme="@style/AppTheme.NoActionBar"
-          
-            android:configChanges="keyboardHidden|orientation|screenSize" ></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        -->
+        <activity android:name=".NavigationDrawer"
+            android:label="@string/title_activity_admin"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
+
+        <activity android:name=".Login_Main"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@style/AppTheme" />
+
+
     </application>
 
 </manifest>
