--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-feature android:name="android.hardware.screen.portrait" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".SplashActivity"
@@ -38,6 +39,7 @@
         -->
         <activity android:name=".NavigationDrawer"
             android:label="@string/title_activity_admin"
+            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"/>
 
 
