--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@
 /build
 /captures
 .externalNativeBuild
-.idea/vcs.xml
-.idea/misc.xml
+/.idea/vcs.xml
+/.idea/misc.xml
 .idea/caches/build_file_checksums.ser
