--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/MaterialDrawerTheme.TranslucentStatus"
             android:configChanges="keyboardHidden|orientation|screenSize"
             >
             <intent-filter>
@@ -38,8 +38,9 @@
 
         <activity android:name=".Login_Main"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/AppTheme.NoActionBar"/>
-           <!-- android:theme="@style/AppTheme"-->
+            android:theme="@style/MaterialDrawerTheme.TranslucentStatus"
+          />
+
 
 
     </application>
